--- a/popup/index.html
+++ b/popup/index.html
@@ -18,7 +18,7 @@
 		<div>
 			<select size="5" id="content">
 				<option value="顾客现在忙，不方便接听电话，后续跟进中。">顾客现在忙，不方便接听电话，后续跟进中。</option>
-				<option value="顾客现在忙，不方便接听电话，后续跟进中。">顾客现在忙，不方便接听电话，后续跟进中。</option>
+				<option value="顾客现在很忙，不方便接听电话，后续跟进中。">顾客现在很忙，不方便接听电话，后续跟进中。</option>
 			</select>
 		</div>
 	</div>
