--- a/popup/index.html
+++ b/popup/index.html
@@ -16,9 +16,7 @@
 	<div id="tabs-1">
 		<div><input id="replayContent" type="text"><button id="addBtn">添加</button><button id="delBtn">删除</button></div>
 		<div>
-			<select size="5" id="content">
-				<option value="顾客现在忙，不方便接听电话，后续跟进中。">顾客现在忙，不方便接听电话，后续跟进中。</option>
-				<option value="顾客现在很忙，不方便接听电话，后续跟进中。">顾客现在很忙，不方便接听电话，后续跟进中。</option>
+			<select size="5" id="content" style="width: 600px;">
 			</select>
 		</div>
 	</div>
